@@ -120,15 +120,16 @@ public:
     // create the key: will fail if the key already exists and !bOkIfExists
   bool  Create(bool bOkIfExists = true);
     // rename a value from old name to new one
-  bool  RenameValue(const wxChar *szValueOld, const wxChar *szValueNew);
+  bool  RenameValue(const wxString& szValueOld, const wxString& szValueNew);
     // rename the key
-  bool  Rename(const wxChar *szNewName);
+  bool  Rename(const wxString& szNewName);
     // copy value to another key possibly changing its name (by default it will
     // remain the same)
-  bool  CopyValue(const wxChar *szValue, wxRegKey& keyDst,
-                  const wxChar *szNewName = NULL);
+  bool  CopyValue(const wxString& szValue, wxRegKey& keyDst,
+                  const wxString& szNewName = wxEmptyString);
+
     // copy the entire contents of the key recursively to another location
-  bool  Copy(const wxChar *szNewName);
+  bool  Copy(const wxString& szNewName);
     // same as Copy() but using a key and not the name
   bool  Copy(wxRegKey& keyDst);
     // close the key (will be automatically done in dtor)
@@ -138,21 +139,19 @@ public:
     // deletes this key and all of it's subkeys/values
   bool  DeleteSelf();
     // deletes the subkey with all of it's subkeys/values recursively
-  bool  DeleteKey(const wxChar *szKey);
-    // deletes the named value (may be NULL to remove the default value)
-  bool  DeleteValue(const wxChar *szValue);
+  bool  DeleteKey(const wxString& szKey);
+    // deletes the named value (may be empty string to remove the default value)
+  bool DeleteValue(const wxString& szValue);
 
   // access to values and subkeys
     // get value type
-  ValueType GetValueType(const wxChar *szValue) const;
+  ValueType GetValueType(const wxString& szValue) const;
     // returns true if the value contains a number (else it's some string)
-  bool IsNumericValue(const wxChar *szValue) const;
+  bool IsNumericValue(const wxString& szValue) const;
 
     // assignment operators set the default value of the key
   wxRegKey& operator=(const wxString& strValue)
-    { SetValue(NULL, strValue); return *this; }
-  wxRegKey& operator=(long lValue)
-    { SetValue(NULL, lValue); return *this; }
+    { SetValue(wxEmptyString, strValue); return *this; }
 
     // query the default value of the key: implicitly or explicitly
   wxString QueryDefaultValue() const;
@@ -161,30 +160,30 @@ public:
     // named values
 
     // set the string value
-  bool  SetValue(const wxChar *szValue, const wxString& strValue);
+  bool  SetValue(const wxString& szValue, const wxString& strValue);
     // retrieve the string value
-  bool  QueryValue(const wxChar *szValue, wxString& strValue) const
+  bool  QueryValue(const wxString& szValue, wxString& strValue) const
     { return QueryValue(szValue, strValue, false); }
     // retrieve raw string value
-  bool  QueryRawValue(const wxChar *szValue, wxString& strValue) const
+  bool  QueryRawValue(const wxString& szValue, wxString& strValue) const
     { return QueryValue(szValue, strValue, true); }
     // retrieve either raw or expanded string value
-  bool  QueryValue(const wxChar *szValue, wxString& strValue, bool raw) const;
+  bool  QueryValue(const wxString& szValue, wxString& strValue, bool raw) const;
 
     // set the numeric value
-  bool  SetValue(const wxChar *szValue, long lValue);
+  bool  SetValue(const wxString& szValue, long lValue);
     // return the numeric value
-  bool  QueryValue(const wxChar *szValue, long *plValue) const;
+  bool  QueryValue(const wxString& szValue, long *plValue) const;
     // set the binary value
-  bool  SetValue(const wxChar *szValue, const wxMemoryBuffer& buf);
+  bool  SetValue(const wxString& szValue, const wxMemoryBuffer& buf);
     // return the binary value
-  bool  QueryValue(const wxChar *szValue, wxMemoryBuffer& buf) const;
+  bool  QueryValue(const wxString& szValue, wxMemoryBuffer& buf) const;
 
   // query existence of a key/value
     // return true if value exists
-  bool HasValue(const wxChar *szKey) const;
+  bool HasValue(const wxString& szKey) const;
     // return true if given subkey exists
-  bool HasSubKey(const wxChar *szKey) const;
+  bool HasSubKey(const wxString& szKey) const;
     // return true if any subkeys exist
   bool HasSubkeys() const;
     // return true if any values exist
