@@ -71,6 +71,10 @@ Changes in behaviour which may result in compilation errors
 
 - virtual wxHtmlParser::AddText() takes wxString, not wxChar*, argument now.
 
+- Funtions that took wxChar* arguments that could by NULL in wxWidgets 2.8.
+  are deprecated and passing NULL to them won't compile anymore, wxEmptyString
+  must be used instead.
+
 Deprecated methods and their replacements
 -----------------------------------------
 
